Thu Dec 17 00:26:01 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.9

	* INSTALL:
	  NEWS:
	  README:
	  configure.in:
	  gtk+.spec:
	  gtk/gtkfeatures.h.in:
	  docs/gtk-config.1: version=1.1.9

Wed Dec 16 21:20:00 PST 1998 Manish Singh <yosh@gimp.org>

	* autogen.sh: rm -rf intl breaks --disable-nls, put it back

	* gtkbutton.[ch]
	* gtktogglebutton.c: s/(enter|leave)/$1_button/g.
	Digital: 1 GTK+: 0 (for now)

Wed Dec 16 22:38:22 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* gdk/gdkevents.c: updated call to g_main_add_poll
          instead of g_main_poll_add

Wed Dec 16 23:32:05 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c (gtk_label_expose): Remove 
	unnecessary cast.

Wed Dec 16 22:50:52 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c gdk/gdkim.c: Check for broken glibc 2.0 
	mb functions, and avoid them.

Wed Dec 16 16:57:55 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkevents.c (gdk_events_queue): Don't
	call XPending() if we have putback events.

Wed Dec 16 16:04:41 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c (gtk_label_expose): Do nothing
	on empty string, quietly.

Wed Dec 16 15:36:19 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_draw_cursor_on_drawable):
	Redraw the character under the cursor when removing
	the cursor.

Wed Dec 16 13:06:17 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.[ch] gtk/gtkmain.[ch] gtk/gtkprivate.h: Move main
	thread lock back to GDK - we need it there for locking
	when translating events. Rename things appropriately.

Wed Dec 16 11:44:21 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrange.c (gtk_range_expose): Fix a x/y typo.

Wed Dec 16 10:20:27 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.8

	* ChangeLog:
	  INSTALL:
	  README:
	  gtk+.spec:
	  docs/gtk-config.1: version=1.1.8

1998-12-16  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gdk/gdkglobals.c: Define gdk_xim_ic only, if USE_XIM is defined.
